// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

import "components/feed/core/proto/v2/wire/duration.proto";

option optimize_for = LITE_RUNTIME;

message RequestSchedule {
  message TimeBasedSchedule {
    repeated Duration refresh_time_from_response_time = 1;
  }
  oneof schedule {
    TimeBasedSchedule time_based_schedule = 1;
  }
}
